@@ -1,47 +1,143 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.phoebus</groupId>
-	<artifactId>parent</artifactId>
-	<version>4.6.6-SNAPSHOT</version>
-	<packaging>pom</packaging>
-	<name>phoebus (parent)</name>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.phoebus</groupId>
+  <artifactId>parent</artifactId>
+  <version>4.6.10-SNAPSHOT</version>
+  <packaging>pom</packaging>
+  <name>phoebus (parent)</name>
+  <description>A framework and set of tools to monitor and operate large scale control systems, such as the ones in the accelerator community.</description>
+  <url>http://www.phoebus.org/</url>
 
-	<scm>
-		<developerConnection>scm:git:https://github.com/ControlSystemStudio/phoebus</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+  <licenses>
+    <license>
+      <name>Eclipse Public License 1.0</name>
+      <url>https://www.eclipse.org/legal/epl-v10.html</url>
+    </license>
+  </licenses>
 
-	<distributionManagement>
-		<repository>
-			<id>github</id>
-			<name>GitHub Packages</name>
-			<url>https://maven.pkg.github.com/ControlSystemStudio/phoebus</url>
-		</repository>
-	</distributionManagement>
+  <scm>
+    <connection>scm:git:git://github.com/ControlSystemStudio/phoebus.git</connection>
+    <developerConnection>scm:git:https://github.com/ControlSystemStudio/phoebus</developerConnection>
+    <url>https://github.com/ControlSystemStudio/phoebus/tree/master</url>
+    <tag>HEAD</tag>
+  </scm>
 
-	<properties>
-		<epics.version>7.0.7</epics.version>
-		<vtype.version>1.0.4</vtype.version>
-		<openjfx.version>16</openjfx.version>
-		<jackson.version>2.10.1</jackson.version>
-		<batik.version>1.14</batik.version>
-		<mockito.version>2.23.4</mockito.version>
-		<postgresql.driver.version>42.2.9</postgresql.driver.version>
-		<lombok.version>1.18.16</lombok.version>
-		<jetty.version>9.4.30.v20200611</jetty.version>
-		<apache.commons.math.version>3.6.1</apache.commons.math.version>
-		<junit.version>4.13.1</junit.version>
-		<es.version>6.8.4</es.version>
-		<!--<maven.repo.local>${project.build.directory}/.m2</maven.repo.local> -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<skipITTests>true</skipITTests>
-		<docker.exclude.tests>**/*NetworkTest.java</docker.exclude.tests>
-		<guava.version>31.0.1-jre</guava.version>
-	</properties>
-	<build>
-		<plugins>
+  <developers>
+    <developer>
+      <name>Kay Kasemir</name>
+      <email>kasemirk@ornl.gov</email>
+      <organization>Oak Ridge National Lab</organization>
+      <organizationUrl>https://github.com/ornl-epics</organizationUrl>
+    </developer>
+    <developer>
+      <name>Kunal Shroff</name>
+      <email>kunalshroff9@gmail.com</email>
+      <organization>Brookhaven National Lab</organization>
+      <organizationUrl>https://github.com/shroffk</organizationUrl>
+    </developer>
+    <developer>
+      <name>Georg Weiss</name>
+      <email>georg.weiss@ess.eu</email>
+      <organization>European Spallation Source</organization>
+      <organizationUrl>https://github.com/georgweiss</organizationUrl>
+    </developer>
+  </developers>
 
+  <distributionManagement>
+    <!-- To be able to deploy, set login/passwd in your m2 settings.xml, <servers> section
+(id values there should match ids below) -->
+    <snapshotRepository>
+      <id>phoebus-sonatype-nexus-snapshots</id>
+      <name>phoebus-sonatype-nexus-snapshots</name>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>phoebus-releases</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/releases</url>
+    </repository>
+  </distributionManagement>
+
+  <properties>
+    <epics.version>7.0.7</epics.version>
+    <vtype.version>1.0.4</vtype.version>
+    <openjfx.version>18</openjfx.version>
+    <jackson.version>2.10.1</jackson.version>
+    <batik.version>1.14</batik.version>
+    <mockito.version>2.23.4</mockito.version>
+    <postgresql.driver.version>42.2.9</postgresql.driver.version>
+    <jetty.version>9.4.30.v20200611</jetty.version>
+    <apache.commons.math.version>3.6.1</apache.commons.math.version>
+    <junit.version>4.13.1</junit.version>
+    <es.version>6.8.4</es.version>
+    <!--<maven.repo.local>${project.build.directory}/.m2</maven.repo.local> -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <skipITTests>true</skipITTests>
+    <guava.version>31.0.1-jre</guava.version>
+  </properties>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.6.2</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+          <fork>true</fork>
+          <compilerArgs>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.22.0</version>
+        <configuration>
+          <skipITs>${skipITTests}</skipITs>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>integration-test</goal>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>3.1.1</version>
+        <configuration>
+          <!-- Only document 'public' code -->
+          <show>public</show>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M5</version>
+        <configuration>
+          <tagNameFormat>v@{project.version}</tagNameFormat>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <releaseProfiles>releases</releaseProfiles>
+        </configuration>
+      </plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
@@ -66,7 +162,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>org.eluder.coveralls</groupId>
 				<artifactId>coveralls-maven-plugin</artifactId>
@@ -75,7 +171,7 @@
 					<repoToken>${env.COVERALLS_TOKEN}</repoToken>
 					<sourceEncoding>UTF-8</sourceEncoding>
 				</configuration>
-				<dependencies>		
+				<dependencies>
 				<dependency>	<!--This is just for coveralls-maven-plugin. It is a known issue:https://github.com/trautonen/coveralls-maven-plugin/issues/141-->
 			<groupId>javax.xml.bind</groupId>
 			<artifactId>jaxb-api</artifactId>
@@ -146,6 +242,39 @@
 
 
 	<profiles>
+		<!-- Release profile -->
+		<profile>
+			<id>releases</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.8</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>phoebus-releases</serverId>
+							<nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>3.0.1</version>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 		<!-- The it-tests profile when used will run all integration tests, these
       are junit test classes with names ending in "IT" -->
 		<profile>
@@ -246,7 +375,7 @@
 									<!-- add this to disable checking -->
 									<doclint>none</doclint>
 									<source>11</source>
-									
+
 								</configuration>
 							</execution>
 						</executions>
